--- a/src/app/components/variables.scss
+++ b/src/app/components/variables.scss
@@ -19,3 +19,6 @@ $color-column-header-divider: #e8edef;
 $color-icon-add: #47c652;
 $color-column-minimize: #febf40;
 $color-tooltip-bg: rgba(97, 97, 97, 0.9);
+$color-text-field-bg: #e7edf6;
+$color-text-field-border: #a3badc;
+$color-text-field-label: rgba(0,0,0,.32)
